# vibe-everywhere

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PLAN.md  README.en.md  README.md  TESTING.md  package.json
.claude/: settings.local.json
.github/actions/setup-protoc/: action.yml
.github/workflows/: app-release.yml  app-tauri-release.yml  ci.yml  release.yml
apps/vibe-agent/: Cargo.toml  build.rs
apps/vibe-agent/src/: codex_acp_bridge.rs  config.rs  easytier.rs  git_runtime.rs  main.rs  port_forward_bridge.rs  port_forward_runtime.rs  providers.rs  shell_bridge.rs  shell_runtime.rs  task_bridge.rs  task_runtime.rs  workspace_runtime.rs
apps/vibe-app/: components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/vibe-app/src/: App.vue  main.ts  router.ts  styles.css  types.ts
apps/vibe-app/src-tauri/: tauri.conf.json
apps/vibe-app/src-tauri/capabilities/: default.json
apps/vibe-app/src-tauri/src/: lib.rs
apps/vibe-app/src/lib/: api.ts  clientConfig.test.ts  clientConfig.ts  conversationRealtime.test.ts  conversationRealtime.ts  conversationRelayAcp.test.ts  format.ts  i18n.ts  notifications.ts  platform.ts  policy.test.ts  policy.ts  projectInventory.test.ts  projectInventory.ts  projects.ts  runtime.ts  theme.ts
apps/vibe-app/src/locales/: en.ts  zh-CN.ts
apps/vibe-app/src/stores/: app.ts  control.ts
apps/vibe-app/src/views/: AppShellView.vue  DashboardView.vue  HomeView.vue  NotificationsView.vue  ProjectWorkspaceView.vue  ProjectsView.vue  SettingsView.vue
apps/vibe-relay/: build.rs
apps/vibe-relay/src/: auth.rs  config.rs  conversations.rs  easytier.rs  git.rs  main.rs  port_forwards.rs  shell.rs  storage.rs  store.rs  tasks.rs  workspace.rs
crates/vibe-agent/: Cargo.toml
crates/vibe-agent/src/: api.rs  auth.rs  config.rs  credentials.rs  encryption.rs  lib.rs  machine_rpc.rs  main.rs  output.rs  session.rs
crates/vibe-agent/tests/: cli_real_server.rs  cli_smoke.rs  machine_rpc_cli.rs  wave3_integration.rs
crates/vibe-app-logs/: Cargo.toml
crates/vibe-app-logs/src/: config.rs  lib.rs  main.rs  server.rs
crates/vibe-cli/: Cargo.toml
crates/vibe-cli/src/: api.rs  auth.rs  bootstrap.rs  config.rs  credentials.rs  daemon.rs  lib.rs  main.rs  persistence.rs  resume.rs  sandbox.rs  session_protocol_mapper.rs
crates/vibe-cli/src/agent/: core.rs  mod.rs  registry.rs
crates/vibe-cli/src/agent/acp/: backend.rs  mod.rs  session_manager.rs
crates/vibe-cli/src/agent/adapters/: mod.rs
crates/vibe-cli/src/commands/: mod.rs
crates/vibe-cli/src/modules/: common.rs  difftastic.rs  mod.rs  proxy.rs  ripgrep.rs  watcher.rs
crates/vibe-cli/src/providers/: acp.rs  claude.rs  mod.rs  run_external.rs
crates/vibe-cli/src/providers/codex/: mod.rs  runtime.rs
crates/vibe-cli/src/providers/gemini/: mod.rs  runtime.rs
crates/vibe-cli/src/providers/openclaw/: mod.rs  runtime.rs
crates/vibe-cli/src/transport/: default_transport.rs  mod.rs
crates/vibe-cli/src/ui/: display.rs  mod.rs  qrcode.rs
crates/vibe-cli/src/utils/: machine_metadata.rs  mod.rs  parsing.rs  path.rs
crates/vibe-cli/tests/: cli_smoke.rs  provider_runtime_smoke.rs  wave5_integration.rs
crates/vibe-cli/tests/fixtures/: mod.rs
crates/vibe-core/src/: lib.rs
crates/vibe-server/: Cargo.toml
crates/vibe-server/src/: config.rs  context.rs  lib.rs  main.rs  version.rs
crates/vibe-server/src/api/: account.rs  artifacts.rs  connect.rs  feed.rs  mod.rs  social.rs  socket.rs  types.rs  utility.rs
crates/vibe-server/src/auth/: account.rs  middleware.rs  mod.rs  token.rs
crates/vibe-server/src/events/: mod.rs  router.rs  socket_updates.rs
crates/vibe-server/src/machines/: http.rs  mod.rs  service.rs  socket.rs
crates/vibe-server/src/monitoring/: mod.rs
crates/vibe-server/src/presence/: cache.rs  mod.rs  timeout.rs
crates/vibe-server/src/sessions/: http.rs  mod.rs  service.rs
crates/vibe-server/src/storage/: db.rs  files.rs  mod.rs  process_image.rs  redis.rs  seq.rs  thumbhash.rs  tx.rs
crates/vibe-server/tests/: wave2_validation.rs  wave4_validation.rs
crates/vibe-wire/: Cargo.toml
crates/vibe-wire/fixtures/: README.md
crates/vibe-wire/src/: lib.rs
docs/: CAPABILITY-CONTRACT.md  ai_worktree_远程开发产品功能设计文档.md  iteration-specs.md  relay-startup.md  relay-startup.zh-CN.md  self-hosted.md
docs/plans/: README.md  process.md
docs/plans/iterations/: v1-summary.md  v2-summary.md  v3-details.md  v3-summary.md  v4-summary.md  v5-details.md  v5-summary.md  v6-details.md  v6-summary.md  v7-details.md  v7-summary.md
docs/plans/rebuild/: README.md  STATUS.md  WAVE10_PROGRESS_REPORT.md  execution-batches.md  execution-plan.md  final-parity-audit.md  master-details.md  master-summary.md  vibe-app-tauri-capability-matrix.md  vibe-app-tauri-coexistence-matrix.md  vibe-app-tauri-extraction-inventory.md  vibe-app-tauri-parity-checklist.md  vibe-app-tauri-promotion-baseline.md  vibe-app-tauri-promotion-plan.md  vibe-app-tauri-route-inventory.md  vibe-app-tauri-wave8-delivery-plan.md  vibe-app-tauri-wave9-migration-and-release-plan.md  vibe-app-tauri-wave9-route-and-capability-matrix.md  vibe-app-tauri-wave9-unified-replacement-plan.md  wave10-master-plan.md
docs/plans/rebuild/archive/: README.md
docs/plans/remediation/: v10-details.md  v10-summary.md  v11-details.md  v11-summary.md  v12-details.md  v12-summary.md  v2-details.md  v2-summary.md  v4-details.md  v4-summary.md  v5-details.md  v6-details.md  v6-summary.md  v7-details.md  v7-summary.md  v8-details.md  v8-summary.md  v9-details.md  v9-summary.md
docs/releases/: unreleased.md  v0.1.10.md  v0.1.14.md  v0.1.18.md  v0.1.19.md  v0.1.8.md  v0.1.9.md
scripts/: README.md  android-doctor.sh  dual-process-smoke.ps1  dual-process-smoke.sh  install-relay.ps1  install-relay.sh  package.json  postinstall.cjs  record-vibe-app-tauri-promotion-baseline.mjs  stage-windows-runtime.ps1  validate-vibe-app-tauri-promotion.mjs  validate-vibe-app-tauri-release.mjs  validate-vibe-wire-fixtures.mjs  verify-release-version.sh
(+162 files in other folders)
