[workspace]
members = [
  "crates/vibe-core",
  "apps/vibe-relay",
  "apps/vibe-agent",
  "apps/vibe-app/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.14"

[workspace.dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
axum = { version = "0.7.9", features = ["json", "macros", "ws"] }
clap = { version = "4.5.37", features = ["derive", "env"] }
cidr = "0.3.1"
futures-core = "0.3.31"
futures-util = "0.3.31"
easytier = { git = "https://github.com/EasyTier/EasyTier", rev = "e2684a93de585bf6cce6255f857c0f12cd00db06", package = "easytier", default-features = false, features = ["tun"] }
reqwest = { version = "0.12.15", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.3.1" }
tauri-build = { version = "2.1.1" }
tauri-plugin-opener = "2.2.6"
tokio = { version = "1.44.2", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.24.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tower-http = { version = "0.5.2", features = ["cors"] }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
which = "8.0.0"
