[package]
name = "vibe-agent"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
cidr.workspace = true
futures-util.workspace = true
easytier.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
uuid.workspace = true
vibe-core = { path = "../../crates/vibe-core" }
which.workspace = true
