[package]
name = "vibe-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "vibe-agent"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
directories = "6.0.0"
dryoc = "0.7.2"
ed25519-dalek = "2.1.1"
futures-util = "0.3.31"
hex = "0.4.3"
hostname = "0.4.2"
hmac = "0.12.1"
qrcode = { version = "0.14.1", default-features = false }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
rust_socketio = { version = "0.6.0", features = ["async"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "1.0.69"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
vibe-wire = { path = "../vibe-wire" }

[dev-dependencies]
axum = "0.8.8"
engineioxide = "0.17.2"
socketioxide = { version = "0.18.2", features = ["extensions", "state"] }
socketioxide-core = "0.17.0"
socketioxide-parser-common = "0.17.0"
tempfile = "3.23.0"
vibe-server = { path = "../vibe-server" }
