[package]
name = "vibe-app-logs"
version = "0.0.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "vibe-app-logs"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["json", "tokio"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0.69"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3.23.0"
