[package]
name = "vibe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vibe"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
clap = { version = "4.5.40", features = ["derive", "env"] }
directories = "6.0.0"
dryoc = "0.7.2"
futures-util = "0.3.31"
hostname = "0.4.2"
qrcode = { version = "0.14.1", default-features = false }
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
rust_socketio = { version = "0.6.0", features = ["async"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0.69"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
uuid = { version = "1.23.0", features = ["v4", "v7", "serde"] }
vibe-agent = { path = "../vibe-agent" }
vibe-wire = { path = "../vibe-wire" }

[dev-dependencies]
tempfile = "3.23.0"
vibe-server = { path = "../vibe-server" }
