[package]
name = "vibe-server"
version = "0.0.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "vibe-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["json", "macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
ed25519-dalek = "2.1.1"
hex = "0.4.3"
hmac = "0.12.1"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png", "webp"] }
parking_lot = "0.12.3"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
s3 = "0.1.24"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
socketioxide = { version = "0.18.2", features = ["extensions", "state"] }
subtle = "2.6.1"
thiserror = "1.0.69"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["rt"] }
tower-http = { version = "0.6.6", features = ["cors"] }
urlencoding = "2.1.3"
uuid = { version = "1.23.0", features = ["serde", "v4", "v7"] }
vibe-wire = { path = "../vibe-wire" }

[dev-dependencies]
engineioxide = "0.17"
socketioxide = { version = "0.18.2", features = ["extensions", "state", "__test_harness"] }
socketioxide-core = "0.17"
socketioxide-parser-common = "0.17"
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }
